# AtomicRipper

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cli/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/drive/: Drive.cpp  Drive.hpp  DriveEnumerator.cpp  DriveEnumerator.hpp  TOC.cpp  TOC.hpp
core/encode/: FlacEncoder.cpp  FlacEncoder.hpp  IEncoder.hpp  WavEncoder.cpp  WavEncoder.hpp
core/metadata/: CoverArt.cpp  CoverArt.hpp  CueSheet.cpp  CueSheet.hpp  DiscId.cpp  DiscId.hpp  MusicBrainz.cpp  MusicBrainz.hpp  TagWriter.cpp  TagWriter.hpp
core/pipeline/: Pipeline.cpp  Pipeline.hpp
core/rip/: RipEngine.cpp  RipEngine.hpp
core/verify/: AccurateRip.cpp  AccurateRip.hpp
gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  ReleaseDialog.cpp  ReleaseDialog.hpp  TrackTableWidget.cpp  TrackTableWidget.hpp  main.cpp
gui/resources/: app.rc
tests/: CMakeLists.txt  test_accuraterip.cpp  test_cuesh.cpp  test_flacenc.cpp  test_toc.cpp
